Fix: Aligned image of hero on right

--- a/css/style.css
+++ b/css/style.css
@@ -655,6 +655,7 @@ footer .footer-icons > a {
   }
   .hero-content-resp .container {
     display: flex;
+    padding-right: 0;
   }
   .hero-content-resp .hero-image > img {
     max-height: 500px;
